--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 25 Mar 2015.
+%% Created using Papers on Thu, 30 Jul 2015.
 %% http://papersapp.com/papers/
 
 @inproceedings{Chakravarty:2011fr,
@@ -1838,7 +1838,7 @@ number = {2},
 pages = {163--185}
 }
 
-@article{Tarditi:2006,
+@article{Tarditi:2006if,
 author = {Tarditi, David and Puri, Sidd and Oglesby, Jose},
 title = {{Accelerator: using data parallelism to program GPUs for general-purpose uses}},
 journal = {SIGOPS Operating Systems Review},
@@ -3688,6 +3688,75 @@ title = {{OptiML: An implicitly parallel domain-specific language for machine le
 booktitle = {ICML '11: The 28th International Conference on Machine Learning},
 year = {2011},
 month = jun
+}
+
+@article{Flanagan:1981bo,
+author = {Flanagan, D P and Belytschko, T},
+title = {{A uniform strain hexahedron and quadrilateral with orthogonal hourglass control}},
+journal = {International Journal for Numerical Methods in Engineering},
+year = {1981},
+volume = {17},
+number = {5},
+pages = {679--706},
+month = may
+}
+
+@inproceedings{Nilsson:2005kz,
+author = {Nilsson, Henrik},
+title = {{Dynamic Optimization for Functional Reactive Programming Using Generalized Algebraic Data Types}},
+booktitle = {ICFP '05: The 10th ACM SIGPLAN international conference on Functional programming},
+year = {2005},
+pages = {54--65},
+publisher = {ACM}
+}
+
+@inproceedings{Lutz:2015ja,
+author = {Lutz, Thibaut and Fensch, Christian and Cole, Murray},
+title = {{Helium: a transparent inter-kernel optimizer for OpenCL}},
+booktitle = {the 8th Workshop},
+year = {2015},
+pages = {70--80},
+publisher = {ACM Press},
+address = {New York, New York, USA}
+}
+
+@inproceedings{Agakov:hb,
+author = {Agakov, F and Bonilla, E and Cavazos, J and Franke, B and Fursin, G and O'Boyle, M F P and Thomson, J and Toussaint, M and Williams, C K I},
+title = {{Using Machine Learning to Focus Iterative Optimization}},
+booktitle = {CGO '06: The 5th IEEE/ACM International Symposium on Code Generation and Optimization},
+pages = {295--305},
+publisher = {IEEE}
+}
+
+@inproceedings{Guillemette:2008hc,
+author = {Guillemette, Louis-Julien and Monnier, Stefan},
+title = {{A type-preserving compiler in Haskell}},
+booktitle = {ICFP '08: The 13th ACM SIGPLAN international conference on Functional programming},
+year = {2008},
+pages = {75--86},
+month = sep
+}
+
+@techreport{LULESH:spec,
+title = {{Hydrodynamics Challenge Problem}},
+year = {2011},
+number = {LLNL-TR-490254}
+}
+
+@techreport{Karlin:2012us,
+author = {Karlin, Ian and Bhatele, Abhinav and Chamberlain, Bradford L and Cohen, Jonathan and Devito, Zachary and Gokhale, Maya and Haque, Riyaz and Hornung, Rich and Keasler, Jeff and Laney, Dan and Luke, Edward and Lloyd, Scott and McGraw, Jim and Neely, Rob and Richards, David and Schulz, Martin and Still, Charle H and Wang, Felix and Wong, Daniel},
+title = {{LULESH Programming Model and Performance Ports Overview}},
+year = {2012},
+number = {LLNL-TR-608824},
+month = dec
+}
+
+@inproceedings{Karlin:2013ux,
+author = {Karlin, Ian and Bhatele, Abhinav and Keasler, Jeff and Chamberlain, Bradford L and Cohen, Jonathan and Devito, Zachary and Haque, Riyaz and Laney, Dan and Luke, Edward and Wang, Felix and Richards, David and Schulz, Martin and Still, Charles},
+title = {{Exploring Traditional and Emerging Parallel Programming Models using a Proxy Application}},
+booktitle = {IPDPS '13: The 2013 IEEE International Symposium on Parallel and Distributed Processing},
+year = {2013},
+address = {Boston, USA}
 }
 
 @inproceedings{Rompf:2013er,
