Canny doesn't compile without optimisations
Although there are configuration options to run without fusion and/or sharing recovery, it turns out that this mode can break several assumptions that the Trafo module makes.

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -100,7 +100,7 @@ SMVM (protein)  & 2M
 Canny           & 16M
                 & 46.0 & (OpenCV)
                 & 100  & (217\%)
-                & tk   & (tk\%)
+                & \multicolumn{2}{c}{(not supported)}
                 \\
 
 Fluid flow      & 2M
