Update Canny result without optimisation
In the results summary table, no-optimisation now means no scalar sharing or array fusion. It turns out that nothing works without array sharing; possibly because arrays are not lifted out of scalar expressions?

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -100,7 +100,8 @@ SMVM (protein)  & 2M
 Canny           & 16M
                 & 46.0 & (OpenCV)
                 & 100  & (217\%)
-                & \multicolumn{2}{c}{(not supported)}
+                % & \multicolumn{2}{c}{\emph{(not supported)}}
+                & 105  & (227\%)
                 \\
 
 Fluid flow      & 2M
@@ -146,7 +147,10 @@ LULESH          & tk
                 \\
 \bottomrule
 \end{tabu}
-\caption{Benchmark Summary}
+\caption[Benchmark summary]{Summary of the performance of the benchmark
+    programs, before and after optimisations. Note that array-level sharing
+    recovery is always enabled, otherwise most programs simply do not run in a
+    reasonable amount of time.}
 \label{tab:benchmark-summary}
 \end{table}
 
