Update Floyd-Warshall no-optim result
See previous commit

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -119,7 +119,8 @@ Radix sort      & 2M
 Floyd-Warshall  & 1k
                 & 7766 & (Repa)
                 & 836  & (10.8\%)
-                & \multicolumn{2}{c}{\emph{(timeout)}}
+                % & \multicolumn{2}{c}{\emph{(timeout)}}
+                & 840  & (10.8\%)
                 \\
 
 MD5             & 1M
