Update MD5 results
This program does not compile without scalar sharing. This is not too surprising because the intermediate expression will be huge. I'm not sure exactly which part of the pipline is failing, as the program exits silently without error...

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -125,8 +125,8 @@ Floyd-Warshall  & 1k
 
 MD5             & 1M
                 & 1.29 & (Hashcat)
-                & 4.69 & (362\%)
-                & tk   & (tk\%)
+                & 3.80 & (294\%)
+                & \multicolumn{2}{c}{\emph{(error)}}
                 \\
 
 K-means         & 100k
@@ -2166,7 +2166,7 @@ baseline.
 \textbf{Benchmark} & \multicolumn{1}{c}{\textbf{Rate (MHash/sec)}} \\
 
 \midrule
-Accelerate      & 213.3 \\
+Accelerate      & 263.3 \\
 % Repa (-N8)      & \\
 Hashcat (CPU)   & 57.1 \\  % 57.14
 Hashcat (GPU)   & 773.3 \\
