Add LULESH codegen and compile time results

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -141,10 +141,10 @@ Ray tracer      & 16M
                 & \multicolumn{2}{c}{\emph{(error)}}
                 \\
 
-LULESH          & tk
-                & tk   & (CUDA)
-                & tk   & (tk\%)
-                & tk   & (tk\%)
+LULESH          & 91k
+                & 1.11 & (CUDA)
+                & 2.09 & (189\%)
+                & \multicolumn{2}{c}{\emph{(error)}}
                 \\
 \bottomrule
 \end{tabu}
@@ -309,9 +309,9 @@ Ray
     \\
 
 LULESH
-    & tk
-    & tk
-    & tk (tk)
+    & 28
+    & 118.3     % 172.7553 µs + 67.50892 ms + 6.286733 ms + 620.4056 µs + 17.19437 ms + 9.231346 ms + 5.073148 ms + 2.529079 ms + 198.7472 µs + 204.6181 µs + 205.3183 µs + 293.0012 µs + 204.4255 µs + 1.913622 ms + 2.501033 ms + 814.0013 µs + 143.9810 µs + 143.0060 µs + 132.4113 µs + 150.3967 µs + 1.794947 ms + 128.4771 µs + 268.0296 µs + 149.0522 µs + 282.7501 µs + 130.2992 µs
+    & 12.6 (71.4)
     \\
 
 \bottomrule
