Add note on missing entries in benchmark summary

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -151,7 +151,8 @@ LULESH          & 91k
 \caption[Benchmark summary]{Summary of the performance of the benchmark
     programs, before and after optimisations. Note that array-level sharing
     recovery is always enabled, otherwise most programs simply do not run in a
-    reasonable amount of time.}
+    reasonable amount of time. The MD5, Ray tracer, and LULESH programs also
+    fail to run without scalar sharing recovery.}
 \label{tab:benchmark-summary}
 \end{table}
 
